# kardashev

./: .bazelrc  .gitattributes  .gitignore  BENCHMARKS.md  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MODULE.bazel  README.md  ROADMAP-1.0-AND-BEYOND.md  ROADMAP-RUST-ZIG.md  ROADMAP-v54-v66.md  ROADMAP-v67-v80.md  ROADMAP-v81-v90.md  ROADMAP-v91-v100.md  ROADMAP.md  SECURITY.md  SPEC.md  kard
.github/workflows/: ci.yml  notify-docs-site.yml
bazel/llvm/: BUILD.bazel  extension.bzl
bazel/rules_kardashev/: BUILD.bazel  defs.bzl
bench/: BUILD.bazel  matmul.c  matmul.kd  primes.c  primes.kd
compiler/: BUILD.bazel  kardc
compiler/include/kardashev/: ast.hpp  ast_print.hpp  borrow_check.hpp  codegen.hpp  lexer.hpp  pattern_match.hpp  typecheck.hpp  types.hpp  version.hpp
compiler/src/: ast_clone.cpp  ast_print.cpp  borrow_check.cpp  codegen.cpp  emit_c.cpp  fmt_main.cpp  lexer.cpp  lsp_main.cpp  main.cpp  parser.cpp  pattern_match.cpp  typecheck.cpp  types.cpp
crates/kardc/: Cargo.toml
crates/kardc/src/: ast.rs  backend.rs  build_system.rs  cli.rs  const_eval.rs  diag.rs  emit_c.rs  fmt.rs  lexer.rs  lib.rs  main.rs  modules.rs  parser.rs  scaffold.rs  sema.rs  span.rs  std.ks  token.rs  types.rs
crates/kardc/tests/: e2e.rs  selfhost_emit.rs  selfhost_lexer.rs  selfhost_parser.rs  selfhost_sema.rs  spec_suite.rs  std_suite.rs
docs/: BUILD.bazel  README.md  SPEC.md  architecture.md  bootstrap-status.md  effects.md  getting-started.md  language-reference.md  language-tour.md  road-to-1.0.md  selfhosting.md  stdlib.md
examples/: README.md  arraylist.ks  arrays.ks  bitwise.ks  captures.ks  casts.ks  catch_capture.ks  collatz.kd  collatz.ks  compound_assign.ks  comptime_builtins.ks  comptime_vals.ks  counter.ks  documented.ks  enum_values.ks  enums.ks  error_sets.ks  errunion.ks  fib.kd  fib.ks  floats.ks  for_loops.ks  generic_direct.ks  generic_structs.ks  generics.ks  hashmap.ks  heap.ks  hello.kd  hello.ks  inference.ks  io.ks  labeled_loops.ks  multi_typeparam.ks  optional.ks  panic.ks  point.ks  pointer_receiver.ks  slices.ks  string_utils.ks  strings.ks  (+5 more)
examples/hello/: BUILD.bazel  main.kd  util.kd
examples/json/: BUILD.bazel  main.kd
examples/kdlex/: BUILD.bazel  main.kd
examples/matrix/: BUILD.bazel  main.kd
examples/parstats/: BUILD.bazel  main.kd
examples/rpn/: BUILD.bazel  main.kd
examples/selfhost/: BUILD.bazel  checker.kd  enumgen.kd  front.kd  llvmgen.kd  parser.kd  printer.kd  structgen.kd  tokens.kd
roadmap/: README.md  ROADMAP-v101-v110.md  ROADMAP-v91-v100.md
selfhost/: ast.ks  astdump.ks  cdump.ks  emit.ks  lexdump.ks  lexer.ks  modres.ks  parser.ks  sema.ks  semadump.ks
tests/: BUILD.bazel  borrow_check_test.cpp  codegen_test.cpp  lexer_test.cpp  parser_test.cpp  pattern_match_test.cpp  smoke_test.sh  smoke_test_asan_ubsan_c_backend.sh  smoke_test_assert_v109.sh  smoke_test_assoc_const.sh  smoke_test_bench.sh  smoke_test_bootstrap.sh  smoke_test_bound_diag.sh  smoke_test_buf_reader.sh  smoke_test_builtin_drop.sh  smoke_test_builtin_macros.sh  smoke_test_c_tuples.sh  smoke_test_capstones.sh  smoke_test_clone.sh  smoke_test_closures.sh  smoke_test_closures2.sh  smoke_test_codegen_contracts.sh  smoke_test_codegen_perf.sh  smoke_test_codegen_tco.sh  smoke_test_coherence.sh  smoke_test_combinators.sh  smoke_test_compiler_fuzz.sh  smoke_test_composite_eq_hash.sh  smoke_test_const.sh  smoke_test_const_ref.sh  smoke_test_container_ops.sh  smoke_test_containers.sh  smoke_test_debug_recursive.sh  smoke_test_debuginfo.sh  smoke_test_deref_assign.sh  smoke_test_diag_depth.sh  smoke_test_diagnostics.sh  smoke_test_differential.sh  smoke_test_doclint.sh  smoke_test_drop.sh  (+122 more)
tests/selfhost/: emit_suite.ks  lexer_suite.ks  parser_suite.ks  sema_suite.ks
tests/spec-quarantine/: error_union_void_payload_invalid_c.ks  index_then_field_assign_array.ks  index_then_field_assign_slice.ks  s30_const_receiver_mutation.ks  s30_ptr_method_on_call_result.ks  slice_elem_method_receiver.ks
tests/spec-quarantine/s15_ptr_slices/: addr_of_index_place.ks
tests/spec/s01_lexical/: comments_ignored.ks  float_literal_digits_dot_digits.ks  float_needs_digits_both_sides_err.ks  ident_case_sensitive.ks  ident_keyword_prefix.ks  ident_underscore_and_digits.ks  int_dotdot_lexes_range.ks  int_literal_overflow_err.ks  int_literals_decimal_i64.ks  keyword_not_identifier_err.ks  minus_minus_double_negation.ks  string_escapes.ks  string_unknown_escape_err.ks  string_unterminated_err.ks  two_char_operators_greedy.ks  type_names_are_identifiers.ks  unexpected_character_err.ks  whitespace_token_separation.ks
tests/spec/s02_syntax/: assoc_left_arith_shift.ks  assoc_left_equality.ks  block_stmt_scope.ks  body_braces_required_err.ks  call_args_grammar.ks  chained_relational_type_err.ks  comptime_binds_single_primary.ks  cond_parens_required_err.ks  defer_stmt_form.ks  fn_decl_forms.ks  grouping_parens.ks  if_else_chain.ks  item_const_decl_pub.ks  let_stmt_forms.ks  missing_semicolon_err.ks  prec_additive_binds_tighter_than_shift.ks  prec_and_binds_tighter_than_or.ks  prec_bitand_binds_tighter_than_bitxor.ks  prec_bitxor_binds_tighter_than_bitor.ks  prec_equality_binds_tighter_than_bitand_err.ks  prec_multiplicative_binds_tighter_than_additive.ks  prec_postfix_binds_tighter_than_unary.ks  prec_relational_binds_tighter_than_equality.ks  prec_shift_binds_tighter_than_relational.ks  prec_unary_binds_tighter_than_multiplicative.ks  prec_unary_not_binds_tighter_than_bool_ops.ks  pub_test_err.ks  return_forms.ks  sibling_block_redeclaration.ks  stray_token_top_level_err.ks  test_block_item.ks  type_syntax_requires_name_err.ks  while_break_continue.ks  while_continue_clause.ks
tests/spec/s03_sema/: and_requires_bool_err.ks  as_width_zoo.ks  assign_to_const_err.ks  assign_to_param_err.ks  assign_type_mismatch_err.ks  block_scope_and_shadowing.ks  block_scope_name_dies_err.ks  bool_arith_err.ks  break_outside_loop_err.ks  (+27 more)
tests/std/: baseenc.ks  bitset.ks  deque.ks  glob.ks  hashes.ks  json.ks  math64.ks  numtext.ks  rng.ks  slices.ks  strops.ks  text.ks
(+615 files in other folders)
