[package]
name = "kardc"
version = "0.165.0"
edition = "2021"
description = "The kardashev compiler and self-contained toolchain (Gen 2: Rust implementation of a Zig-philosophy systems language)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/kardashevlang/kardashev"

# The user-facing toolchain binary. A single binary that is compiler + build
# system + test runner + formatter, in the spirit of `zig`.
[[bin]]
name = "kard"
path = "src/main.rs"

[lib]
name = "kardc"
path = "src/lib.rs"

# Zig-philosophy: the toolchain is self-contained. No external crates — it
# builds against the Rust standard library alone.
[dependencies]
