load("//bazel/rules_kardashev:defs.bzl", "kardashev_binary")

# Make the capstone source readable by //tests:smoke_test_capstones, which
# builds the real file (rather than an inlined copy) so the test doubles as a
# build check of the shipped example.
exports_files(
    ["main.kd"],
    visibility = ["//visibility:public"],
)

# Phase 31 (v5) capstone: a JSON object parser written in kardashev. Scans a
# JSON source string with str_char_at, slices keys with str_substring, and
# builds a HashMap<String, i64> (the Phase 28 String-keyed map), then answers
# lookups and prints a summary. AOT-compiled via //compiler:kardc.
kardashev_binary(
    name = "json",
    src = "main.kd",
)
