load("//bazel/rules_kardashev:defs.bzl", "kardashev_binary")

# Make the capstone source readable by //tests:smoke_test_capstones, which
# builds the real file (rather than an inlined copy) so the test doubles as a
# build check of the shipped example.
exports_files(
    ["main.kd"],
    visibility = ["//visibility:public"],
)

# Phase 31 (v5) capstone: a lexer for a kardashev subset, written in
# kardashev. Scans source bytes with str_char_at into a Vec<Tok>, classifies
# identifiers vs keywords with str_substring + str_eq, then counts `fn NAME`
# declarations and checks brace balance. AOT-compiled via //compiler:kardc.
kardashev_binary(
    name = "kdlex",
    src = "main.kd",
)
