load("//bazel/rules_kardashev:defs.bzl", "kardashev_binary")

# Readable by //tests:smoke_test_phase80, which builds the real file so the test
# doubles as a build check of the shipped capstone.
exports_files(
    ["main.kd"],
    visibility = ["//visibility:public"],
)

# Phase 80 (v13) CAPSTONE — "concurrency, applied." A parallel map-reduce: the
# series data(i) = (i*7+13) mod 1000 is split across 4 worker threads, each
# reducing its chunk to a `Stats` struct sent on a shared MPSC channel; the main
# thread gathers + merges. Exercises the whole v13 line — thread_spawn (`share`),
# channels MOVING a struct across threads, the Send rule, fork-join, and the v12
# numeric helpers — with a deterministic witness checked against the sequential
# answer. AOT-compiled via //compiler:kardc and exercised by
# //tests:smoke_test_phase80.
kardashev_binary(
    name = "parstats",
    src = "main.kd",
)
