load("//bazel/rules_kardashev:defs.bzl", "kardashev_binary")

# Readable by //tests:smoke_test_phase88 / :phase89 / :phase90.
exports_files(
    ["lexer.kd", "tokens.kd", "parser.kd"],
    visibility = ["//visibility:public"],
)

# Roadmap v15 (self-hosting): the front of a kardashev compiler, written IN
# kardashev. Phase 88 = byte classifier; Phase 89 = token-stream lexer (Vec<Token>
# with spans); Phase 90 = a parser for kardashev syntax (a function signature ->
# a structured FnSig AST).
kardashev_binary(name = "lexer", src = "lexer.kd")
kardashev_binary(name = "tokens", src = "tokens.kd")
kardashev_binary(name = "parser", src = "parser.kd")
