load("//bazel/rules_kardashev:defs.bzl", "kardashev_binary")

# Readable by //tests:smoke_test_phase88..91.
exports_files(
    ["lexer.kd", "tokens.kd", "parser.kd", "printer.kd"],
    visibility = ["//visibility:public"],
)

# Roadmap v15 (self-hosting): the front of a kardashev compiler, written IN
# kardashev. 88 = byte classifier; 89 = token-stream lexer (Vec<Token> + spans);
# 90 = parser for kardashev syntax (FnSig AST); 91 = AST printer (round-trip).
kardashev_binary(name = "lexer", src = "lexer.kd")
kardashev_binary(name = "tokens", src = "tokens.kd")
kardashev_binary(name = "parser", src = "parser.kd")
kardashev_binary(name = "printer", src = "printer.kd")
